@@ -16,33 +16,47 @@
 
 package com.palantir.gradle.jdks
 
-import spock.config.ConfigurationObject
-import spock.lang.TempDir
+import static org.assertj.core.api.Assertions.assertThat
 
+import spock.lang.TempDir
 import java.util.regex.Matcher
 import java.util.regex.Pattern
-
-import static org.assertj.core.api.Assertions.assertThat;
-
 import com.google.common.base.Splitter
 import com.google.common.collect.Iterables
 import nebula.test.IntegrationSpec
-
 import java.nio.file.Files
 import java.nio.file.Path
 
 class GradleJdkPatcherIntegrationTest extends IntegrationSpec {
 
     private static AmazonCorrettoJdkDistribution CORRETTO_JDK_DISTRIBUTION = new AmazonCorrettoJdkDistribution();
-    private static String GRADLE_7VERSION = "7.6.2";
-    private static String GRADLE_8VERSION = "8.5";
-    private static String JDK_17_VERSION = "17.0.9.8.1";
-    private static String JDK_21_VERSION = "21.0.2.13.1";
+    private static String GRADLE_7VERSION = "7.6.2"
+    private static String GRADLE_8VERSION = "8.5"
+    private static String JDK_11_VERSION = "11.0.22.7.1"
+    private static String JDK_17_VERSION = "17.0.9.8.1"
+    private static String JDK_21_VERSION = "21.0.2.13.1"
     private static String AMAZON_ROOT_CA_1_SERIAL = "143266978916655856878034712317230054538369994"
-    private static String PALANTIR_3RD_GEN_SERIAL = "18126334688741185161";
+    private static String PALANTIR_3RD_GEN_SERIAL = "18126334688741185161"
+    private static final int JAVA_17_BYTECODE = 61
+    private static final int ENABLE_PREVIEW_BYTECODE = 65535
 
     @TempDir
     private Path workingDir
+
+    def java17PreviewCode = '''
+        public class Main {
+            sealed interface MyUnion {
+                record Foo(int number) implements MyUnion {}
+            }
+        
+            public static void main(String[] args) {
+                MyUnion myUnion = new MyUnion.Foo(1234);
+                switch (myUnion) {
+                    case MyUnion.Foo foo -> System.out.println("Java 17 pattern matching switch: " + foo.number);
+                }
+            }
+        }
+        '''
 
     def setup() {
 
@@ -50,7 +64,8 @@ class GradleJdkPatcherIntegrationTest extends IntegrationSpec {
         buildFile << """
             buildscript {
                 repositories {
-                    mavenCentral()
+                    mavenCentral() { metadataSources { mavenPom(); ignoreGradleMetadataRedirection() } }
+                    gradlePluginPortal() { metadataSources { mavenPom(); ignoreGradleMetadataRedirection() } }
                 }
                 // we need to inject the classpath of the plugin under test manually. The tests call the `./gradlew` 
                 // command directly in the tests (so not using the nebula-test workflow).
@@ -60,18 +75,18 @@ class GradleJdkPatcherIntegrationTest extends IntegrationSpec {
             }
             apply plugin: 'java'
             apply plugin: 'com.palantir.jdks'
+            apply plugin: 'application'
 
             tasks.register('getGradleJavaHomeProp') {
                 doLast {
                     println "Gradle java home is " + System.getProperty('org.gradle.java.home')
                 }
             }
+            
+            application {
+                mainClass = 'Main'
+            }
         """.replace("FILES", getPluginClasspathInjector().join(",")).stripIndent(true)
-
-        // language=gradle
-        addSubproject 'subproject', '''
-            apply plugin: 'java-library'
-        '''.stripIndent(true)
     }
 
     private Iterable<File> getPluginClasspathInjector() {
@@ -110,7 +125,7 @@ class GradleJdkPatcherIntegrationTest extends IntegrationSpec {
         Path gradleJdksPath = workingDir.resolve("gradle-jdks")
         String expectedLocalPath = gradleJdksPath.resolve(getLocalFilename(JDK_17_VERSION))
         wrapperResult1.contains(String.format("Successfully installed JDK distribution in %s", expectedLocalPath))
-        String expectedJdkLog = "JVM:          17.0.9 (Amazon.com Inc. 17.0.9+8-LTS)";
+        String expectedJdkLog = "JVM:          17.0.9 (Amazon.com Inc. 17.0.9+8-LTS)"
         wrapperResult1.contains(expectedJdkLog)
         wrapperResult1.contains("Gradle 7.6.2")
         wrapperResult1.contains("Gradle java home is " + expectedLocalPath)
@@ -126,56 +141,72 @@ class GradleJdkPatcherIntegrationTest extends IntegrationSpec {
 
     def '#gradleVersionNumber: javaToolchains correctly set-up'() {
         file('gradle.properties') << 'gradle.jdk.setup.enabled=true'
+
+        buildFile << '''
+            javaVersions {
+                libraryTarget = '11'
+                distributionTarget = '17_PREVIEW'
+            }
+        '''.stripIndent(true)
+        file('src/main/java/Main.java') << java17PreviewCode
+
         gradleVersion = gradleVersionNumber
-        populateGradleFiles(JDK_17_VERSION, Set.of(JDK_17_VERSION, JDK_21_VERSION))
-        def subprojectJdk21 = addSubproject 'subprojectJdk21', '''
+        populateGradleFiles(JDK_11_VERSION, Set.of(JDK_11_VERSION, JDK_17_VERSION))
+
+        //language=groovy
+        def subprojectLib = addSubproject 'subprojectLib', '''
             apply plugin: 'java-library'
-            java {
-                toolchain {
-                    languageVersion.set(JavaLanguageVersion.of(21))
-                }
+            javaVersion {
+                library()
             }
         '''.stripIndent(true)
 
-        writeHelloWorld(subprojectJdk21)
+        writeHelloWorld(subprojectLib)
 
         when:
         runTasksSuccessfully('wrapper').standardOutput
-        String output = runGradlewCommand(List.of("./gradlew", "javaToolchains", "compileJava", "--info"))
+        String output = runGradlewCommand(List.of("./gradlew", "javaToolchains", "compileJava", "--debug"))
+        File compiledClass = new File(projectDir, "build/classes/java/main/Main.class")
 
         then:
         output.contains("Auto-detection:     Disabled")
         output.contains("Auto-download:      Disabled")
+        output.contains("JDK 11.0.22")
         output.contains("JDK 17.0.9")
-        output.contains("JDK 21.0.2")
         Matcher matcher = Pattern.compile("Detected by:       (.*)").matcher(output)
         while (matcher.find()) {
             String detectedByPattern = matcher.group(1)
             detectedByPattern.contains("Gradle property 'org.gradle.java.installations.paths'")
         }
         Path gradleJdksPath = workingDir.resolve("gradle-jdks")
-        Path expectedLocalPath = gradleJdksPath.resolve(getLocalFilename(JDK_21_VERSION).trim())
-        // in mac the <workingDir> will symlink to /private/<workingDir>
-        output.contains(String.format("Compiling with toolchain '%s'", expectedLocalPath.toFile().getCanonicalPath()))
+        Path expectedJdk11 = gradleJdksPath.resolve(getLocalFilename(JDK_11_VERSION).trim())
+        output.contains(String.format("Compiling with toolchain '%s'", expectedJdk11.toFile().getCanonicalPath()))
+        Path expectedJdk17 = gradleJdksPath.resolve(getLocalFilename(JDK_17_VERSION).trim())
+        output.contains(String.format("Compiling with toolchain '%s'", expectedJdk17.toFile().getCanonicalPath()))
+        output.contains("--enable-preview")
+        assertBytecodeVersion(compiledClass, JAVA_17_BYTECODE, ENABLE_PREVIEW_BYTECODE)
+
+        when:
+        String runOutput = runGradlewCommand(List.of("./gradlew", "run", "-i"))
+
+        then:
+        runOutput.contains("--enable-preview")
+        runOutput.contains(expectedJdk17.toFile().getCanonicalPath())
+        runOutput.contains("BUILD SUCCESSFUL")
 
         where:
-        gradleVersionNumber << [ GRADLE_7VERSION, GRADLE_8VERSION ]
+        gradleVersionNumber << [ GRADLE_8VERSION ]
     }
 
     def '#gradleVersionNumber: fails if toolchain not found'() {
         file('gradle.properties') << 'gradle.jdk.setup.enabled=true'
         gradleVersion = gradleVersionNumber
         populateGradleFiles(JDK_17_VERSION, Set.of(JDK_17_VERSION, JDK_21_VERSION))
-        def subprojectJdk21 = addSubproject 'subprojectJdk21', '''
+        def subprojectLib = addSubproject 'subprojectLib', '''
             apply plugin: 'java-library'
-            java {
-                toolchain {
-                    languageVersion.set(JavaLanguageVersion.of(15))
-                }
-            }
         '''.stripIndent(true)
 
-        writeHelloWorld(subprojectJdk21)
+        writeHelloWorld(subprojectLib)
 
         when:
         runTasksSuccessfully('wrapper').standardOutput
@@ -332,5 +363,24 @@ class GradleJdkPatcherIntegrationTest extends IntegrationSpec {
         Process process = processBuilder.start()
         process.waitFor()
         return CommandRunner.readAllInput(process.getInputStream())
+    }
+
+    private static final int BYTECODE_IDENTIFIER = (int) 0xCAFEBABE
+
+    // See http://illegalargumentexception.blogspot.com/2009/07/java-finding-class-versions.html
+    private static void assertBytecodeVersion(File file, int expectedMajorBytecodeVersion,
+                                              int expectedMinorBytecodeVersion) {
+        try (InputStream stream = new FileInputStream(file)
+             DataInputStream dis = new DataInputStream(stream)) {
+            int magic = dis.readInt()
+            if (magic != BYTECODE_IDENTIFIER) {
+                throw new IllegalArgumentException("File " + file + " does not appear to be java bytecode")
+            }
+            int minorBytecodeVersion = dis.readUnsignedShort()
+            int majorBytecodeVersion = dis.readUnsignedShort()
+
+            assert majorBytecodeVersion == expectedMajorBytecodeVersion
+            assert minorBytecodeVersion == expectedMinorBytecodeVersion
+        }
     }
 }
